# github-usage-review

./: .ai-keel.json  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.claude/commands/: ai-keel.specwip.plan.md  architecture-decision.md  commit-message.md  pr-description.md  repo-architecture-review.md  resolve-pr-comments.md  specwip.analyze.md  specwip.clarify.md  specwip.implement.md  specwip.specify.md  specwip.tasks.md
.github/: copilot-instructions.md
.github/agents/: ai-keel.specwip.analyze.agent.md  ai-keel.specwip.clarify.agent.md  ai-keel.specwip.implement.agent.md  ai-keel.specwip.plan.agent.md  ai-keel.specwip.specify.agent.md  ai-keel.specwip.tasks.agent.md  designer.agent.md  planner.agent.md  refactorer.agent.md  security-reviewer.agent.md  specwip.analyze.agent.md  (+5 more)
.resources/: check-drift.py
backend/: pyproject.toml  requirements.txt
backend/app/: analytics.py  config.py  db.py  github_client.py  importer.py  main.py  schemas.py  snapshot.py
backend/scripts/: __init__.py  reset_data.py  seed_test_data.py
backend/tests/: conftest.py  test_analytics.py  test_analytics_extended.py  test_billing_usage.py  test_csv_import.py  test_db_export.py  test_features.py  test_import_endpoint.py  test_importer.py  test_model_flattener.py  test_report_flatteners.py  test_schema_validation.py  test_snapshot_endpoint.py  test_snapshot_flatteners.py  test_window.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
mcp-servers/: jira.json
scripts/: bump-version.sh
(+149 files in other folders)
